--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,4 +6,9 @@
         <h4>{{post.title}}</h4>
         <p>{{post.body}}</p>
     </div>
+
+    <div>
+        <a href="{% url 'post_edit' post.pk %}">Edit Post</a>
+        <a href="{% url 'post_delete' post.pk %}">Delete Post</a>
+    </div>
 {% endblock content %}
