forms and user accounts

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,8 +13,16 @@
         <header>
             <a href="{% url 'home' %}">Django Blog</a> |
             <a href="{% url 'post_new' %}">New Blog Post</a>
-
         </header>
+
+        {% if user.is_authenticated %}
+            <p>Hi {{user.username}}</p>
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <p>You are not logged In</p>
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+
         <div>
             {% block content %}
             {% endblock content %}
